[package]
name = "nng"
version = "1.0.0-rc.1"
authors = ["Nathan Kent <nate@nkent.net>"]

# Until nng-sys is published
publish = false

description = "A safe wrapper for nanomsg-next-generation (nng)"
repository = "https://gitlab.com/neachdainn/nng-rs"
readme = "README.md"

keywords = ["nng", "nanomsg"]
categories = ["api-bindings", "network-programming"]
license = "MIT"

edition = "2018"

[badges]
gitlab = { repository = "neachdainn/nng-rs", branch = "master" }

[features]
default = ["build-nng"]
build-nng = ["nng-sys/build-nng"]
ffi-module = []

[dependencies]
nng-sys = { git = "https://github.com/jeikabu/nng-rust", branch = "feature/nng_1.2", default-features = false }
log = "0.4"

[dev-dependencies]
byteorder = "1.2"
