[package]
name = "nng"
version = "1.0.0-rc.1"
authors = ["Nathan Kent <nate@nkent.net>"]

description = "A safe wrapper for nanomsg-next-generation (nng)"
repository = "https://gitlab.com/neachdainn/nng-rs"
readme = "README.md"

keywords = ["nng", "nanomsg"]
categories = ["api-bindings", "network-programming"]
license = "MIT"

edition = "2018"

[badges]
gitlab = { repository = "neachdainn/nng-rs", branch = "master" }

[features]
default = ["build-nng"]
build-nng = ["nng-sys/build-nng", "nng-sys/nng-stats"]
ffi-module = []

[dependencies]
nng-sys = "1.2.3-rc.1"
log = "0.4"
