[package]
name = "nng"
version = "1.0.0"
authors = ["Nathan Kent <nate@nkent.net>"]

description = "A safe wrapper for NNG (Nanomsg v2)"
repository = "https://gitlab.com/neachdainn/nng-rs"
readme = "README.md"

keywords = ["nng", "nanomsg", "zeromq", "zmq"]
categories = ["api-bindings", "network-programming"]
license = "MIT"

edition = "2018"

[badges]
gitlab = { repository = "neachdainn/nng-rs", branch = "master" }

[features]
default = ["build-nng"]
build-nng = ["nng-sys/build-nng"]
ffi-module = []

[dependencies]
nng-sys = "1.4.0-rc.0"
log = "0.4"
