[package]
name = "nng-sys"
version = "0.1.2"
authors = ["Nathan Kent <nate@nkent.net>"]

description = "Bindings for nanomsg-next-generation (nng)"
documentation = "https://nanomsg.github.io/nng/man/v1.0.0/libnng.3.html"
homepage = "https://nanomsg.github.io/nng/"
repository = "https://gitlab.com/neachdainn/nng-rs"
readme = "README.md"

keywords = ["nng", "nanomsg"]
categories = ["external-ffi-bindings", "network-programming"]
license = "MIT"

edition = "2018"

[features]
default = ["build-nng"]
build-nng = []

[dependencies]

[build-dependencies]
cmake = "0.1"
