[package]
name = "nng"
version = "0.2.1"
authors = ["Nathan Kent <nate@nkent.net>"]

description = "A safe wrapper for nanomsg-next-generation (nng)"
repository = "https://gitlab.com/neachdainn/nng-rs"
readme = "README.md"

keywords = ["nng", "nanomsg"]
categories = ["api-bindings", "network-programming"]
license = "MIT"

[features]
default = ["build-nng"]
build-nng = ["nng-sys/build-nng"]

[dependencies]
nng-sys = { path = "../nng-sys", default-features = false }
log = "0.4"

[dev-dependencies]
byteorder = "1.2"
