[package]
name = "nng"
version = "0.3.0"
authors = ["Nathan Kent <nate@nkent.net>"]

description = "A safe wrapper for nanomsg-next-generation (nng)"
repository = "https://gitlab.com/neachdainn/nng-rs"
readme = "README.md"

keywords = ["nng", "nanomsg"]
categories = ["api-bindings", "network-programming"]
license = "MIT"

[features]
default = ["build-nng"]
build-nng = ["nng-sys/build-nng"]

[dependencies]
nng-sys = { version = "0.1.2", default-features = false }
log = "0.4"

[dev-dependencies]
byteorder = "1.2"
